Updated project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socketio-chat-experiment-01",
+  "name": "vanilla-socketio-chat",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
